<resources>
    <string name="app_name">Autojobs</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="action_settings">Settings</string>


    <string name="nav_home">Home</string>
    <string name="nav_searchjob">Search Jobs</string>
    <string name="nav_Appliedjobs">Applied Jobs</string>
    <string name="nav_savedjobs">Saved Jobs</string>
    <string name="nav_interviewschedule">Interview Schedule</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_privacysetting">Privacy Setting</string>
    <string name="nav_logout">Logout</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Search Jobs</item>
        <item>Applied Jobs</item>
        <item>Saved Jobs</item>
        <item>Interview Schedule</item>
        <item>Profile</item>
        <item>Privacy Setting</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_job_des">jobDesActivity</string>

</resources>
