<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_searchjob"
            android:icon="@drawable/ic_action_search"
            android:title="@string/nav_searchjob" />
        <item
            android:id="@+id/nav_Appliedjobs"
            android:icon="@drawable/ic_applied_jobs"
            android:title="@string/nav_Appliedjobs" />

        <item
            android:id="@+id/nav_savedjobs"
            android:icon="@drawable/ic_action_save"
            android:title="@string/nav_savedjobs" />

        <item
            android:id="@+id/nav_interviewschedule"
            android:icon="@drawable/ic_action_interview"
            android:title="@string/nav_interviewschedule" />
         <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_privacysetting"
            android:icon="@drawable/ic_privacy_setting"
            android:title="@string/nav_privacysetting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/nav_logout" />

    </group>



</menu>
